--- a/src/pages/weather.css
+++ b/src/pages/weather.css
@@ -21,9 +21,10 @@
   border-radius: 7px;
   width: 400px;
   height: auto;
+  min-height: 300px;
   position: relative;
 }
-.alert{
+.alert {
   top: 0;
   position: absolute;
   left: 10%;
@@ -102,4 +103,27 @@
   font-size: 18px;
   font-style: italic;
   color: orange;
+}
+.loading {
+  width: 100%;
+  height: 200px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+.load {
+  width: 70px;
+  height: 70px;
+  border: 5px solid white;
+  border-top-color: orange;
+  border-radius: 50%;
+  animation: rot 1s linear infinite;
+}
+@keyframes rot {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
