--- a/src/pages/weather.css
+++ b/src/pages/weather.css
@@ -127,3 +127,10 @@
     transform: rotate(360deg);
   }
 }
+
+@media only screen and (max-width: 600px) {
+  .weather-wrapper {
+    width: 100%;
+    min-height: 90vh;
+  }
+}
